--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Story by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<!-- Story by HTML5 UP -->
+<html lang="vi">
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>Lazi Voyage - Blog Văn Hoá Việt</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,14 +16,14 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Blog Văn Hoá Việt</h1>
+							<p class="major">Chào bạn, Lazi Voyage là blog để bạn khám phá <a href="https://lazivoyage.blogspot.com">văn hoá Việt</a> và <a href="https://lazivoyage.wordpress.com">du lịch Việt Nam</a> qua những câu chuyện và trải nghiệm đầy cảm hứng..</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Bắt đầu</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/lazi-voyage/banner-rong-thoi-ly.jpg" alt="Lazi Voyage Blog Van Hoa Viet" />
 						</div>
 					</section>
 
@@ -353,4 +349,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
