--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <!-- Story by HTML5 UP -->
 <html lang="vi">
 	<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;500;600&family=Playfair+Display:wght@700;800&display=swap" rel="stylesheet">
 		<title>Lazi Voyage - Blog Văn Hoá Việt</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -437,5 +440,6 @@
 	</body>
 
 </html>
+
 
 
