--- a/index.html
+++ b/index.html
@@ -246,11 +246,9 @@
         </button>
         <div class="accordion-content">
           <ul class="province-list">
-						  <li><a href="/ha-noi">Hà Nội</a></li>
-			              <li><a href="/quang-ninh">Quảng Ninh</a></li>
-			              <li><a href="/tuyen-quang">Tuyên Quang</a> (+ <a href="/ha-giang">Hà Giang</a>)</li>
-			              <li><a href="/hai-phong">Hải Phòng</a> (+ <a href="#">Hải Dương</a>)</li>
-			              <li><a href="/bac-ninh">Bắc Ninh</a> (+ <a href="#">Bắc Giang</a>)</li>
+						  <li>Đông Bắc<a href="/tuyen-quang">Tuyên Quang</a> (+ <a href="/ha-giang">Hà Giang</a>)</li>
+						  <li>Tây Bắc: Điện Biên, Sơn La, Lai Châu</li>
+			  			  <li>Đồng Bằng: <a href="/ha-noi">Hà Nội</a>, <a href="/quang-ninh">Quảng Ninh</a>, <a href="/hai-phong">Hải Phòng</a> (+ <a href="#">Hải Dương</a>), <a href="/bac-ninh">Bắc Ninh</a> (+ <a href="#">Bắc Giang</a>)</li>
           </ul>
         </div>
       </div>
@@ -346,6 +344,7 @@
 	</body>
 
 </html>
+
 
 
 
