--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
 				<!-- Six -->
 			<section class="wrapper style1 align-center">
-  <div class="inner">
+  <div>
     <h2>Tour Xuyên Việt</h2>
     <p>Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho chuyến đi từ Bắc vào Nam (hoặc ngược lại) chưa?</p>
     
@@ -292,11 +292,11 @@
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Thông tin liên hệ</h2>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
-										<label for="name">Name</label>
+										<label for="name">Tên</label>
 										<input type="text" name="name" id="name" value="" />
 									</div>
 									<div class="field half">
@@ -304,12 +304,12 @@
 										<input type="email" name="email" id="email" value="" />
 									</div>
 									<div class="field">
-										<label for="message">Message</label>
+										<label for="message">Nội dung</label>
 										<textarea name="message" id="message" rows="6"></textarea>
 									</div>
 								</div>
 								<ul class="actions special">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
+									<li><input type="submit" name="submit" id="submit" value="Gửi" /></li>
 								</ul>
 							</form>
 
@@ -344,13 +344,3 @@
 	</body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
