--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
 				<!-- Six -->
 			<section class="wrapper style1 align-center">
-  <div>
+  <div class="inner">
     <h2>Tour Xuyên Việt</h2>
     <p>Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho chuyến đi từ Bắc vào Nam (hoặc ngược lại) chưa?</p>
     
@@ -344,3 +344,4 @@
 	</body>
 
 </html>
+
