--- a/index.html
+++ b/index.html
@@ -288,7 +288,32 @@
     </div>
   </div>
 </section>
-
+				
+	<!-- test acc -->
+<section class="image-accordion">
+  <div class="accordion-item">
+    <input type="radio" name="accordion" id="item1">
+    <label for="item1" class="accordion-header">
+      <img src="image1.jpg" alt="Image 1">
+      <h3>Title 1</h3>
+    </label>
+    <div class="accordion-content">
+      <p>Content for item 1. This can include text, additional images, or links.</p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <input type="radio" name="accordion" id="item2">
+    <label for="item2" class="accordion-header">
+      <img src="image2.jpg" alt="Image 2">
+      <h3>Title 2</h3>
+    </label>
+    <div class="accordion-content">
+      <p>Content for item 2. Customize as needed.</p>
+    </div>
+  </div>
+  <!-- Thêm các mục khác nếu cần -->
+</section>
+				
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
@@ -344,4 +369,5 @@
 	</body>
 
 </html>
+
 
