--- a/index.html
+++ b/index.html
@@ -294,21 +294,21 @@
   <div class="accordion-item">
     <input type="radio" name="accordion" id="item1">
     <label for="item1" class="accordion-header">
-      <img src="image1.jpg" alt="Image 1">
-      <h3>Title 1</h3>
+      <img src="images/gallery/fulls/01.jpg" alt="Image 1">
+      <h3>Miền Bắc</h3>
     </label>
     <div class="accordion-content">
-      <p>Content for item 1. This can include text, additional images, or links.</p>
+      <p>Hanoi, Hanoi, Hanoi, Hanoi, Hanoi, Hanoi, Hanoi, Hanoi, ...</p>
     </div>
   </div>
   <div class="accordion-item">
     <input type="radio" name="accordion" id="item2">
     <label for="item2" class="accordion-header">
-      <img src="image2.jpg" alt="Image 2">
-      <h3>Title 2</h3>
+      <img src="images/gallery/fulls/02.jpg" alt="Image 2">
+      <h3>Miền Trung</h3>
     </label>
     <div class="accordion-content">
-      <p>Content for item 2. Customize as needed.</p>
+      <p>Huế, Huế, Huế, Huế, Huế, Huế, Huế, Huế, Huế, ...</p>
     </div>
   </div>
   <!-- Thêm các mục khác nếu cần -->
@@ -369,5 +369,6 @@
 	</body>
 
 </html>
+
 
 
