--- a/index.html
+++ b/index.html
@@ -238,55 +238,53 @@
     <p>Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho chuyến đi từ Bắc vào Nam (hoặc ngược lại) chưa?</p>
     	
     <!-- Image Accordion -->
-    <section class="image-accordion">
-      <div class="accordion-item">
-        <input type="radio" name="accordion" id="item1">
-        <label for="item1" class="accordion-header">
-          <img src="images/gallery/fulls/01.jpg" alt="Image 1">
-          <h3>Miền Bắc</h3>
-        </label>
-        <div class="accordion-content">
-          <ul>
-            <li>Đông Bắc: <a href="/tuyen-quang">Tuyên Quang</a> (+ <a href="/ha-giang">Hà Giang</a>)</li>
-            <li>Tây Bắc: <a href="#">Điện Biên</a>, <a href="#">Sơn La</a>, <a href="#">Lai Châu</a></li>
-            <li>Đồng Bằng: <a href="/ha-noi">Hà Nội</a>, <a href="/quang-ninh">Quảng Ninh</a>, <a href="/hai-phong">Hải Phòng</a> (+ <a href="#">Hải Dương</a>), <a href="/bac-ninh">Bắc Ninh</a> (+ <a href="#">Bắc Giang</a>)</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="accordion-item">
-        <input type="radio" name="accordion" id="item2">
-        <label for="item2" class="accordion-header">
-          <img src="images/gallery/fulls/02.jpg" alt="Image 2">
-          <h3>Miền Trung</h3>
-        </label>
-        <div class="accordion-content">
-          <ul>
-            <li><a href="/thanh-hoa">Thanh Hóa</a></li>
-            <li><a href="/nghe-an">Nghệ An</a></li>
-            <li><a href="/da-nang">Đà Nẵng</a></li>
-            <li><a href="/hue">Thừa Thiên Huế</a></li>
-            <li><a href="/quang-tri">Quảng Trị</a> (+ <a href="/quang-binh">Quảng Bình</a>)</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="accordion-item">
-        <input type="radio" name="accordion" id="item3">
-        <label for="item3" class="accordion-header">
-          <img src="images/gallery/fulls/03.jpg" alt="Image 3">
-          <h3>Miền Nam</h3>
-        </label>
-        <div class="accordion-content">
-          <ul>
-            <li><a href="/ho-chi-minh">TP. Hồ Chí Minh</a> (+ <a href="/vung-tau">Vũng Tàu</a> + <a href="/binh-duong">Bình Dương</a>)</li>
-            <li><a href="/can-tho">Cần Thơ</a> (+ <a href="/soc-trang">Sóc Trăng</a> + <a href="/hau-giang">Hậu Giang</a>)</li>
-            <li><a href="/dong-nai">Đồng Nai</a> (+ <a href="/binh-phuoc">Bình Phước</a>)</li>
-            <li><a href="/dong-thap">Đồng Tháp</a> (+ <a href="/tien-giang">Tiền Giang</a>)</li>
-          </ul>
-        </div>
-      </div>
-    </section>
+<section class="horizontal-accordion">
+  <div class="accordion-item">
+    <input type="radio" name="accordion" id="item1" checked>
+    <label for="item1" class="accordion-header">
+      <img src="images/gallery/fulls/01.jpg" alt="Image 1">
+      <h3 class="vertical-text">Miền Bắc</h3>
+    </label>
+    <div class="accordion-content">
+      <ul>
+        <li>Đông Bắc: <a href="/tuyen-quang">Tuyên Quang</a> (+ <a href="/ha-giang">Hà Giang</a>)</li>
+        <li>Tây Bắc: <a href="#">Điện Biên</a>, <a href="#">Sơn La</a>, <a href="#">Lai Châu</a></li>
+        <li>Đồng Bằng: <a href="/ha-noi">Hà Nội</a>, <a href="/quang-ninh">Quảng Ninh</a>, <a href="/hai-phong">Hải Phòng</a> (+ <a href="#">Hải Dương</a>), <a href="/bac-ninh">Bắc Ninh</a> (+ <a href="#">Bắc Giang</a>)</li>
+      </ul>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <input type="radio" name="accordion" id="item2">
+    <label for="item2" class="accordion-header">
+      <img src="images/gallery/fulls/02.jpg" alt="Image 2">
+      <h3 class="vertical-text">Miền Trung</h3>
+    </label>
+    <div class="accordion-content">
+      <ul>
+        <li><a href="/thanh-hoa">Thanh Hóa</a></li>
+        <li><a href="/nghe-an">Nghệ An</a></li>
+        <li><a href="/da-nang">Đà Nẵng</a></li>
+        <li><a href="/hue">Thừa Thiên Huế</a></li>
+        <li><a href="/quang-tri">Quảng Trị</a> (+ <a href="/quang-binh">Quảng Bình</a>)</li>
+      </ul>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <input type="radio" name="accordion" id="item3">
+    <label for="item3" class="accordion-header">
+      <img src="images/gallery/fulls/03.jpg" alt="Image 3">
+      <h3 class="vertical-text">Miền Nam</h3>
+    </label>
+    <div class="accordion-content">
+      <ul>
+        <li><a href="/ho-chi-minh">TP. Hồ Chí Minh</a> (+ <a href="/vung-tau">Vũng Tàu</a> + <a href="/binh-duong">Bình Dương</a>)</li>
+        <li><a href="/can-tho">Cần Thơ</a> (+ <a href="/soc-trang">Sóc Trăng</a> + <a href="/hau-giang">Hậu Giang</a>)</li>
+        <li><a href="/dong-nai">Đồng Nai</a> (+ <a href="/binh-phuoc">Bình Phước</a>)</li>
+        <li><a href="/dong-thap">Đồng Tháp</a> (+ <a href="/tien-giang">Tiền Giang</a>)</li>
+      </ul>
+    </div>
+  </div>
+</section>
   </div>
 </section>
 
@@ -344,3 +342,4 @@
 
 	</body>
 </html>
+
