--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
 									</div>
 								</article>
 							</div>
+							<ul class="actions stacked">
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Tìm hiểu</a></li>
+							</ul>
 					</section>
 				
 				<!-- North Vietnam -->
@@ -298,6 +301,7 @@
 
 	</body>
 </html>
+
 
 
 
