--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Blog Văn Hoá Việt</h1>
-							<p class="major">Chào bạn, Lazi Voyage là blog để bạn khám phá <a href="https://lazivoyage.blogspot.com">văn hoá Việt</a> và <a href="https://lazivoyage.wordpress.com">du lịch Việt Nam</a> qua những câu chuyện và trải nghiệm đầy cảm hứng..</p>
+							<p>Chào bạn, Lazi Voyage là blog để bạn khám phá <a href="https://lazivoyage.blogspot.com">văn hoá Việt</a> và <a href="https://lazivoyage.wordpress.com">du lịch Việt Nam</a> qua những câu chuyện và trải nghiệm đầy cảm hứng..</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Bắt đầu</a></li>
 							</ul>
@@ -40,7 +40,7 @@
 						</div>
 
 						<!-- Gallery -->
-							<div class="gallery style2 medium lightbox onscroll-fade-in">
+							<div class="gallery style2 medium lightbox onscroll-fade-in content">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
@@ -301,6 +301,7 @@
 
 	</body>
 </html>
+
 
 
 
