--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						</div>
 
 						<!-- Gallery -->
-							<div class="gallery style2 medium lightbox onscroll-fade-in content">
+							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
@@ -301,6 +301,7 @@
 
 	</body>
 </html>
+
 
 
 
