--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 								</article>
 							</div>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Tìm hiểu</a></li>
+								<li><a href="#first" class="button">Tìm hiểu</a></li>
 							</ul>
 					</section>
 				
@@ -301,6 +301,7 @@
 
 	</body>
 </html>
+
 
 
 
