--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 									</div>
 								</article>
 							</div>
-							<ul class="actions stacked">
+							<ul class="actions stacked" style="margin-top: 2em;">
 								<li><a href="#first" class="button">Tìm hiểu</a></li>
 							</ul>
 					</section>
@@ -301,6 +301,7 @@
 
 	</body>
 </html>
+
 
 
 
