--- a/index.html
+++ b/index.html
@@ -42,146 +42,62 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+									<a href="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-1.jpg" class="image">
+										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-1.jpg" alt="Du lịch Việt Nam" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Du lịch Việt Nam</h3>
+										<p>Khám phá Việt Nam</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Chi tiết</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+									<a href="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-2.jpg" class="image">
+										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-2.jpg" alt="Tìm hiểu văn hoá việt" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Văn hoá việt</h3>
+										<p>Tìm hiểu sự đa dạng trong văn hoá việt</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Chi tiết</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
+									<a href="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-3.jpg" class="image">
+										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-3.jpg" alt="Sử việt" />
 									</a>
 									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Sử việt</h3>
+										<p>Tìm hiểu sử việt qua những chuyến du lịch Việt Nam</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Chi tiết</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
+									<a href="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-4.jpg" class="image">
+										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-4.jpg" alt="Phong tục tập quán Việt Nam" />
 									</a>
 									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Phong tục Việt Nam</h3>
+										<p>Việt Nam sở hữu phong tục khá đa dạng, có nhiều sự khác biệt giữa các khu vực trên cả nước</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Chi tiết</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
-										<img src="images/gallery/thumbs/05.jpg" alt="" />
+									<a href="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-5.jpg" class="image">
+										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-5.jpg" alt="Phong cách sống Việt Nam" />
 									</a>
 									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Phong cách sống việt</h3>
+										<p>Người Việt Nam có phong cách sống khá thú vị, có sự giao thoa với các phong cách sống của các nước bạn</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
-										<img src="images/gallery/thumbs/06.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
-										<img src="images/gallery/thumbs/07.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
-										<img src="images/gallery/thumbs/08.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
-										<img src="images/gallery/thumbs/09.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/10.jpg" class="image">
-										<img src="images/gallery/thumbs/10.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/11.jpg" class="image">
-										<img src="images/gallery/thumbs/11.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
-										<img src="images/gallery/thumbs/12.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Chi tiết</span></li>
 										</ul>
 									</div>
 								</article>
@@ -195,17 +111,17 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Miền Bắc</h2>
-							<ul>
+							<ul style="text-align: justify;">
 						        <li>Đông Bắc: <a href="/tuyen-quang">Tuyên Quang</a> (+ <a href="/ha-giang">Hà Giang</a>)</li>
 						        <li>Tây Bắc: <a href="#">Điện Biên</a>, <a href="#">Sơn La</a>, <a href="#">Lai Châu</a></li>
 						        <li>Đồng Bằng: <a href="/ha-noi">Hà Nội</a>, <a href="/quang-ninh">Quảng Ninh</a>, <a href="/hai-phong">Hải Phòng</a> (+ <a href="#">Hải Dương</a>), <a href="/bac-ninh">Bắc Ninh</a> (+ <a href="#">Bắc Giang</a>)</li>
      						</ul>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Xem thêm</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/lazi-voyage/vietnam-3-mien/vietnam-3-mien-1.jpg" alt="Du lịch miền bắc Việt Nam" />
 						</div>
 					</section>
 
@@ -213,7 +129,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Miền Trung</h2>
-							<ul>
+							<ul style="text-align: justify;">
 						        <li><a href="/thanh-hoa">Thanh Hóa</a></li>
 						        <li><a href="/nghe-an">Nghệ An</a></li>
 						        <li><a href="/da-nang">Đà Nẵng</a></li>
@@ -221,11 +137,11 @@
 						        <li><a href="/quang-tri">Quảng Trị</a> (+ <a href="/quang-binh">Quảng Bình</a>)</li>
       						</ul>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Xem thêm</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/lazi-voyage/vietnam-3-mien/vietnam-3-mien-2.jpg" alt="Du lịch miền trung Việt Nam" />
 						</div>
 					</section>
 
@@ -233,18 +149,18 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Miền Nam</h2>
-							<ul>
+							<ul style="text-align: justify;">
 						        <li><a href="/ho-chi-minh">TP. Hồ Chí Minh</a> (+ <a href="/vung-tau">Vũng Tàu</a> + <a href="/binh-duong">Bình Dương</a>)</li>
 						        <li><a href="/can-tho">Cần Thơ</a> (+ <a href="/soc-trang">Sóc Trăng</a> + <a href="/hau-giang">Hậu Giang</a>)</li>
 						        <li><a href="/dong-nai">Đồng Nai</a> (+ <a href="/binh-phuoc">Bình Phước</a>)</li>
 						        <li><a href="/dong-thap">Đồng Tháp</a> (+ <a href="/tien-giang">Tiền Giang</a>)</li>
 						    </ul>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Xem thêm</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/lazi-voyage/vietnam-3-mien/vietnam-3-mien-3.jpg" alt="Du lịch miền nam Việt Nam" />
 						</div>
 					</section>
 
@@ -301,6 +217,7 @@
 
 	</body>
 </html>
+
 
 
 
