--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 						<div class="content">
 							<h2>Miền Bắc</h2>
 							<ul style="text-align: justify;">
-						        <li>Đông Bắc: <a href="/tuyen-quang">Tuyên Quang</a> (+ <a href="/ha-giang">Hà Giang</a>)</li>
-						        <li>Tây Bắc: <a href="#">Điện Biên</a>, <a href="#">Sơn La</a>, <a href="#">Lai Châu</a></li>
-						        <li>Đồng Bằng: <a href="/ha-noi">Hà Nội</a>, <a href="/quang-ninh">Quảng Ninh</a>, <a href="/hai-phong">Hải Phòng</a> (+ <a href="#">Hải Dương</a>), <a href="/bac-ninh">Bắc Ninh</a> (+ <a href="#">Bắc Giang</a>)</li>
+						        <li>Đông Bắc: <a href="/tuyen-quang">Tuyên Quang</a> (+ <a href="/ha-giang">Hà Giang</a>), Cao Bằng, Thái Nguyên (+ Bắc Kạn), Lạng Sơn</li>
+						        <li>Tây Bắc: Lào Cai (+ Yên Bái), <a href="#">Lai Châu</a>, <a href="#">Điện Biên</a>, <a href="#">Sơn La</a>, Phú Thọ (+ Hoà Bình + Vĩnh Phúc)</li>
+						        <li>Đồng Bằng: <a href="/ha-noi">Hà Nội</a>, <a href="/quang-ninh">Quảng Ninh</a>, <a href="/hai-phong">Hải Phòng</a> (+ <a href="#">Hải Dương</a>), <a href="/bac-ninh">Bắc Ninh</a> (+ <a href="#">Bắc Giang</a>), Hưng Yên (+ Thái Bình), Ninh Bình (+ Hà Nam + Nam Định)</li>
      						</ul>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Xem thêm</a></li>
@@ -130,11 +130,9 @@
 						<div class="content">
 							<h2>Miền Trung</h2>
 							<ul style="text-align: justify;">
-						        <li><a href="/thanh-hoa">Thanh Hóa</a></li>
-						        <li><a href="/nghe-an">Nghệ An</a></li>
-						        <li><a href="/da-nang">Đà Nẵng</a></li>
-						        <li><a href="/hue">Thừa Thiên Huế</a></li>
-						        <li><a href="/quang-tri">Quảng Trị</a> (+ <a href="/quang-binh">Quảng Bình</a>)</li>
+						        <li><a href="/thanh-hoa">Thanh Hóa</a>, <a href="/nghe-an">Nghệ An</a>, Hà Tĩnh, Quảng Trị (+ Quảng Bình)</li>
+						        <li><a href="/hue">Huế</a>, <a href="/da-nang">Đà Nẵng</a> (+ Quảng Nam)</li>
+						        <li>Quảng Ngãi (+ Kon Tum), Gia Lai (+ Bình Định), Đắk Lắk (+Phú Yên)</li>
       						</ul>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Xem thêm</a></li>
@@ -150,10 +148,8 @@
 						<div class="content">
 							<h2>Miền Nam</h2>
 							<ul style="text-align: justify;">
-						        <li><a href="/ho-chi-minh">TP. Hồ Chí Minh</a> (+ <a href="/vung-tau">Vũng Tàu</a> + <a href="/binh-duong">Bình Dương</a>)</li>
-						        <li><a href="/can-tho">Cần Thơ</a> (+ <a href="/soc-trang">Sóc Trăng</a> + <a href="/hau-giang">Hậu Giang</a>)</li>
-						        <li><a href="/dong-nai">Đồng Nai</a> (+ <a href="/binh-phuoc">Bình Phước</a>)</li>
-						        <li><a href="/dong-thap">Đồng Tháp</a> (+ <a href="/tien-giang">Tiền Giang</a>)</li>
+						        <li><a href="/ho-chi-minh">TP. Hồ Chí Minh</a> (+ <a href="/vung-tau">Vũng Tàu</a> + <a href="/binh-duong">Bình Dương</a>), Lâm Đồng (+ Đắk Nông + Bình Thuận), Khánh Hoà (+ Ninh Thuận), Đồng Nai (+ Bình Phước), Tây Ninh (+ Long An)</li>
+						        <li>Mekong: <a href="/can-tho">Cần Thơ</a> (+ <a href="/soc-trang">Sóc Trăng</a> + <a href="/hau-giang">Hậu Giang</a>), <a href="/dong-thap">Đồng Tháp</a> (+ <a href="/tien-giang">Tiền Giang</a>), Vĩnh Long (+ Trà Vinh + Bến Tre), Cà Mau (+ Bạc Liêu), An Giang (+ Kiên Giang)</li>
 						    </ul>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Xem thêm</a></li>
@@ -217,6 +213,7 @@
 
 	</body>
 </html>
+
 
 
 
