--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						</div>
 
 						<!-- Gallery -->
-							<div class="gallery style2 medium lightbox onscroll-fade-in">
+							<div class="gallery style1 small lightbox onscroll-fade-in">
 								<article>
 									<a href="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-1.jpg" class="image">
 										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-1.jpg" alt="Du lịch Việt Nam" />
@@ -213,6 +213,7 @@
 
 	</body>
 </html>
+
 
 
 
