--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-2.jpg" class="image">
+									<div class="image">
 										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-2.jpg" alt="Tìm hiểu văn hoá việt" />
-									</a>
+									</div>
 									<div class="caption">
 										<h3>Văn hoá việt</h3>
 										<p>Tìm hiểu sự đa dạng trong văn hoá việt</p>
@@ -66,9 +66,9 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-3.jpg" class="image">
+									<div class="image">
 										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-3.jpg" alt="Sử việt" />
-									</a>
+									</div>
 									<div class="caption">
 										<h3>Sử việt</h3>
 										<p>Tìm hiểu sử việt qua những chuyến du lịch Việt Nam</p>
@@ -78,9 +78,9 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-4.jpg" class="image">
+									<div class="image">
 										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-4.jpg" alt="Phong tục tập quán Việt Nam" />
-									</a>
+									</div>
 									<div class="caption">
 										<h3>Phong tục Việt Nam</h3>
 										<p>Việt Nam sở hữu phong tục khá đa dạng, có nhiều sự khác biệt giữa các khu vực trên cả nước</p>
@@ -90,9 +90,9 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-5.jpg" class="image">
+									<div class="image">
 										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-5.jpg" alt="Phong cách sống Việt Nam" />
-									</a>
+									</div>
 									<div class="caption">
 										<h3>Phong cách sống việt</h3>
 										<p>Người Việt Nam có phong cách sống khá thú vị, có sự giao thoa với các phong cách sống của các nước bạn</p>
@@ -213,6 +213,7 @@
 
 	</body>
 </html>
+
 
 
 
