--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Playfair+Display:wght@700;800&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-		
+		<link rel="icon" type="image/x-icon" href="images/lazi-voyage/logo-lazi-update.png">
 		<title>Lazi Voyage - Blog Văn Hoá Việt</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -213,6 +213,7 @@
 
 	</body>
 </html>
+
 
 
 
