--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 						</div>
 					</section>
 				
-				<!-- Tour Xuyên Việt -->
+				<!-- Phương ngữ Việt Nam -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Tour Xuyên Việt</h2>
-							<p>Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho <strong>tour xuyên việt</strong> chưa?</p>
+							<h2>Phương ngữ Việt Nam</h2>
+							<p>Một trong những điểm thú vị nhất của <strong>tour xuyên Việt</strong> chính là được khám phá sự đa dạng của phương ngữ Việt Nam. Từ giọng trầm ấm của miền Bắc, chất giọng du dương của miền Trung đến sự phóng khoáng, dễ thương của miền Nam, mỗi vùng miền đều mang một nét độc đáo riêng. Sự khác biệt về từ ngữ, cách phát âm tạo nên một bức tranh ngôn ngữ phong phú, sống động và đầy màu sắc.</p>
 						</div>
 
 						<!-- Gallery -->
@@ -46,8 +46,8 @@
 										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-1.jpg" alt="Du lịch Việt Nam" />
 										</div>
 									<div class="caption">
-										<h3>Du lịch Việt Nam</h3>
-										<p>Khám phá Việt Nam</p>
+										<h3>Phương ngữ miền trung</h3>
+										<p>Hưn/mô/tê/răng</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Chi tiết</span></li>
 										</ul>
@@ -58,8 +58,8 @@
 										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-2.jpg" alt="Tìm hiểu văn hoá việt" />
 									</div>
 									<div class="caption">
-										<h3>Văn hoá việt</h3>
-										<p>Tìm hiểu sự đa dạng trong văn hoá việt</p>
+										<h3>Phương ngữ miền bắc</h3>
+										<p>Trời đánh thánh vật</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Chi tiết</span></li>
 										</ul>
@@ -70,8 +70,8 @@
 										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-3.jpg" alt="Sử việt" />
 									</div>
 									<div class="caption">
-										<h3>Sử việt</h3>
-										<p>Tìm hiểu sử việt qua những chuyến du lịch Việt Nam</p>
+										<h3>Phương ngữ miền trung</h3>
+										<p>Răng mà ri rứa?</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Chi tiết</span></li>
 										</ul>
@@ -82,8 +82,8 @@
 										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-4.jpg" alt="Phong tục tập quán Việt Nam" />
 									</div>
 									<div class="caption">
-										<h3>Phong tục Việt Nam</h3>
-										<p>Việt Nam sở hữu phong tục khá đa dạng, có nhiều sự khác biệt giữa các khu vực trên cả nước</p>
+										<h3>Phương ngữ miền nam</h3>
+										<p>Bự chà bá lửa</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Chi tiết</span></li>
 										</ul>
@@ -94,8 +94,8 @@
 										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-5.jpg" alt="Phong cách sống Việt Nam" />
 									</div>
 									<div class="caption">
-										<h3>Phong cách sống việt</h3>
-										<p>Người Việt Nam có phong cách sống khá thú vị, có sự giao thoa với các phong cách sống của các nước bạn</p>
+										<h3>Phương ngữ miền tây</h3>
+										<p>Bá láp bá xàm</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Chi tiết</span></li>
 										</ul>
@@ -109,6 +109,10 @@
 				
 				<!-- North Vietnam -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<div class="inner">
+							<h2>Tour Xuyên Việt</h2>
+							<p>Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho tour xuyên việt chưa?</p>
+						</div>
 						<div class="content">
 							<h2>Miền Bắc</h2>
 							<ul style="text-align: justify;">
@@ -213,6 +217,7 @@
 
 	</body>
 </html>
+
 
 
 
