--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
 								<li><a href="#first" class="button">Tìm hiểu</a></li>
 							</ul>
 					</section>
-				
-				<!-- North Vietnam -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-					<div class="inner">
+				<section>
+						<div class="content">
 							<h2>Tour Xuyên Việt</h2>
 							<p>Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho tour xuyên việt chưa?</p>
 						</div>
+				</section>
+				<!-- North Vietnam -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Miền Bắc</h2>
 							<ul style="text-align: justify;">
@@ -217,6 +218,7 @@
 
 	</body>
 </html>
+
 
 
 
