--- a/index.html
+++ b/index.html
@@ -106,12 +106,21 @@
 								<li><a href="#first" class="button">Tìm hiểu</a></li>
 							</ul>
 					</section>
-				<section>
+
+				<!-- Tour Vietnam -->
+					<section class="spotlight style5 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Tour Xuyên Việt</h2>
 							<p>Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho tour xuyên việt chưa?</p>
+							<ul class="actions stacked">
+								<li><a href="#" class="button">Xem thêm</a></li>
+							</ul>
 						</div>
-				</section>
+						<div class="image">
+							<img src="images/lazi-voyage/banner-rong-thoi-ly.jpg" alt="Tour xuyên việt" />
+						</div>
+					</section>
+				
 				<!-- North Vietnam -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
@@ -218,6 +227,7 @@
 
 	</body>
 </html>
+
 
 
 
