--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 						</div>
 					</section>
 				
-				<!-- Phương ngữ Việt Nam -->
+				<!-- Vườn ngôn ngữ việt -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Phương ngữ Việt Nam</h2>
-							<p>Một trong những điểm thú vị nhất của <strong>tour xuyên Việt</strong> chính là được khám phá sự đa dạng của phương ngữ Việt Nam. Từ giọng trầm ấm của miền Bắc, chất giọng du dương của miền Trung đến sự phóng khoáng, dễ thương của miền Nam, mỗi vùng miền đều mang một nét độc đáo riêng. Sự khác biệt về từ ngữ, cách phát âm tạo nên một bức tranh ngôn ngữ phong phú, sống động và đầy màu sắc.</p>
+							<h2>Vườn ngôn ngữ việt</h2>
+							<p>Một trong những điểm thú vị nhất của tour xuyên Việt chính là được khám phá sự đa dạng của tiếng Việt. Ngôn ngữ Việt Nam vốn đã hàm chứa đa tầng ý nghĩa, thêm vào đó tùy từng ngữ cảnh, phong cách, thái độ, tính cách của người sử dụng mà ý nghĩa của câu nói càng trở nên thâm thúy hơn. "Phong ba bão táp không bằng ngữ pháp Việt Nam"! Hãy cùng xem dân Việt 3 miền chơi chữ, nói lái "đỉnh" thế nào nhé</p>
 						</div>
 
 						<!-- Gallery -->
@@ -227,6 +227,7 @@
 
 	</body>
 </html>
+
 
 
 
