--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 							<div class="gallery style1 small onscroll-fade-in">
 								<article>
 										<div class="image">
-										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-1.jpg" alt="Du lịch Việt Nam" />
+										<img src="images/pic01.jpg" alt="Ngôn ngữ Việt Nam" />
 										</div>
 									<div class="caption">
-										<h3>Phương ngữ miền trung</h3>
-										<p>Hưn/mô/tê/răng</p>
+										<h3>Người bắc chơi chữ</h3>
+										<p>Ông cơm bà cơm mẹ cơm bố cơm em cơm</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Chi tiết</span></li>
 										</ul>
@@ -55,11 +55,11 @@
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-2.jpg" alt="Tìm hiểu văn hoá việt" />
+										<img src="images/pic01.jpg" alt="Ngôn ngữ Việt Nam" />
 									</div>
 									<div class="caption">
-										<h3>Phương ngữ miền bắc</h3>
-										<p>Trời đánh thánh vật</p>
+										<h3>Người bắc chơi chữ</h3>
+										<p>Cơm hay tivi </p>
 										<ul class="actions fixed">
 											<li><span class="button small">Chi tiết</span></li>
 										</ul>
@@ -67,11 +67,11 @@
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-3.jpg" alt="Sử việt" />
+										<img src="images/pic01.jpg" alt="Ngôn ngữ Việt Nam" />
 									</div>
 									<div class="caption">
-										<h3>Phương ngữ miền trung</h3>
-										<p>Răng mà ri rứa?</p>
+										<h3>Người bắc chơi chữ</h3>
+										<p>Mồm</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Chi tiết</span></li>
 										</ul>
@@ -79,7 +79,7 @@
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-4.jpg" alt="Phong tục tập quán Việt Nam" />
+										<img src="images/pic01.jpg" alt="Ngôn ngữ Việt Nam" />
 									</div>
 									<div class="caption">
 										<h3>Phương ngữ miền nam</h3>
@@ -91,7 +91,7 @@
 								</article>
 								<article>
 									<div class="image">
-										<img src="images/lazi-voyage/tour-xuyen-viet/tour-xuyen-viet-5.jpg" alt="Phong cách sống Việt Nam" />
+										<img src="images/pic01.jpg" alt="Ngôn ngữ Việt Nam" />
 									</div>
 									<div class="caption">
 										<h3>Phương ngữ miền tây</h3>
@@ -227,6 +227,7 @@
 
 	</body>
 </html>
+
 
 
 
