--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Blog Văn Hoá Việt</h1>
-							<p>Chào bạn, Lazi Voyage là blog để bạn khám phá <a href="https://lazivoyage.blogspot.com">văn hoá Việt</a> và <a href="https://lazivoyage.wordpress.com">du lịch Việt Nam</a> qua những câu chuyện và trải nghiệm đầy cảm hứng..</p>
+							<p style="text-align: justify;">Chào bạn, Lazi Voyage là blog để bạn khám phá <a href="https://lazivoyage.blogspot.com">văn hoá Việt</a> và <a href="https://lazivoyage.wordpress.com">du lịch Việt Nam</a> qua những câu chuyện và trải nghiệm đầy cảm hứng..</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Bắt đầu</a></li>
 							</ul>
@@ -35,8 +35,8 @@
 				<!-- Vườn ngôn ngữ việt -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Vườn ngôn ngữ việt</h2>
-							<p>Một trong những điểm thú vị nhất của tour xuyên Việt chính là được khám phá sự đa dạng của tiếng Việt. Ngôn ngữ Việt Nam vốn đã hàm chứa đa tầng ý nghĩa, thêm vào đó tùy từng ngữ cảnh, phong cách, thái độ, tính cách của người sử dụng mà ý nghĩa của câu nói càng trở nên thâm thúy hơn. "Phong ba bão táp không bằng ngữ pháp Việt Nam"! Hãy cùng xem dân Việt 3 miền chơi chữ, nói lái "đỉnh" thế nào nhé</p>
+							<h2>Vườn Ngôn Ngữ Việt</h2>
+							<p style="text-align: justify;">Một trong những điểm thú vị nhất của tour xuyên Việt chính là được khám phá sự đa dạng của tiếng Việt. Ngôn ngữ Việt Nam vốn đã hàm chứa đa tầng ý nghĩa, thêm vào đó tùy từng ngữ cảnh, phong cách, thái độ, tính cách của người sử dụng mà ý nghĩa của câu nói càng trở nên thâm thúy hơn. <em>Phong ba bão táp không bằng ngữ pháp Việt Nam!</em> Hãy cùng xem dân Việt 3 miền chơi chữ, nói lái <em>đỉnh</em> thế nào nhé</p>
 						</div>
 
 						<!-- Gallery -->
@@ -111,7 +111,7 @@
 					<section class="spotlight style5 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Tour Xuyên Việt</h2>
-							<p>Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho tour xuyên việt chưa?</p>
+							<p style="text-align: justify;">Việc rút gọn bộ máy hành chính từ 63 xuống 34 tỉnh thành đã khiến việc du lịch xuyên Việt trở nên dễ dàng hơn bao giờ hết. Bạn đã sẵn sàng cho tour xuyên việt chưa?</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Xem thêm</a></li>
 							</ul>
@@ -177,8 +177,8 @@
 					<!-- Góc văn hoá việt -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Góc văn hoá việt</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Góc Văn Hoá việt</h2>
+							<p style="text-align: justify;">Góc Văn hoá Việt là nơi bạn khám phá chiều sâu của văn hoá Việt qua những câu chuyện, phong tục và nét đẹp truyền thống. Từ kho tàng sử Việt hào hùng đến những khía cạnh tinh tế của cuộc sống Việt đương đại, chúng tôi mời bạn cùng tìm hiểu để thêm yêu và tự hào về bản sắc dân tộc.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section><div class="inner">
 									<span class="icon style2 major fa-gem"></span>
@@ -297,4 +297,5 @@
 
 	</body>
 </html>
+
 
